samples/01/nginx-pod-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-pod-service
spec:
  ports:
    - port: 80
  selector:
    app: nginx-pod
